# tesseract-bot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: help.rs  mod.rs  read.rs
