[package]
name = "discordbot-tesseract"
version = "0.1.0"
authors = ["HoolaBoola <jaime.heikkiladias@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
kankyo = "0.3.0"
log = "0.4"
regex = "1.3.5"
lazy_static = "1.4.0"
leptess = "0.8.1"

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
